<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/List"
    android:title="List"
    app:showAsAction="never"></item>
    <item
        android:id="@+id/Maps"
        android:title="Maps"
        app:showAsAction="never"></item>
</menu>