<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sivakrishna.bbva.Fragments.ListFragment">

    android:id="@+id/toolbar2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    app:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
    app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
    />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list"
        android:layout_below="@+id/toolbar2"
        android:layout_alignParentStart="true"></android.support.v7.widget.RecyclerView>

</FrameLayout>
