<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sivakrishna.bbva.activitiesintent.Display">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolba"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/imagevie"
        android:layout_below="@+id/toolba"
        android:layout_width="384dp"
        android:layout_height="145dp"
        android:src="@android:drawable/title_bar_tall"/>
    <TextView
        android:id="@+id/textVie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagevie"
        android:text="TextView"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textVie"
        android:text="TextView"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:text="Navigate"/>


</RelativeLayout>
